--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,8 @@ target-version = ["py311"]
 
 [tool.ruff]
 line-length = 100
-select = ["E","F","I","UP"]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP"]
 ignore = []
+
