--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ uvicorn==0.30.5
 scikit-learn==1.3.2
 joblib==1.3.2
 numpy==1.26.4
+pandas==2.2.2
 pydantic==2.8.2
 pytest==8.3.2
 httpx==0.27.2
 ruff==0.6.9
 black==24.8.0
+
