--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         run: python src/train.py
 
       - name: Unit tests
-        run: pytest -q
+        run: PYTHONPATH=. pytest -q
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
