--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
       packages: write
 
     env:
-      IMAGE: ghcr.io/${{ github.repository }}
+      IMAGE: ghcr.io/gustav951/virtual-diabetes-clinic-grupp-g
       VERSION: ${{ github.ref_name }}
 
     steps:
@@ -29,31 +29,23 @@ jobs:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
 
-      - name: Install deps
+      - name: Install dependencies
         run: pip install -r requirements.txt
 
       - name: Train model
         run: python src/train.py
 
-      - name: Build image
-        run: docker build --build-arg VERSION=${{ env.VERSION }} -t $IMAGE:${{ env.VERSION }} .
-
+      # ✅ Moved login BEFORE build and push
       - name: Login to GHCR
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Build Docker image
+        run: docker build --build-arg VERSION=${{ env.VERSION }} -t $IMAGE:${{ env.VERSION }} .
 
       - name: Smoke test container
         run: bash scripts/smoke.sh $IMAGE:${{ env.VERSION }}
 
-      - name: Push image
+      - name: Push Docker image
         run: docker push $IMAGE:${{ env.VERSION }}
 
-      - name: Extract release notes
-        run: bash scripts/extract_release_notes.sh ${{ env.VERSION }}
-
-      - name: Publish GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ env.VERSION }}
-          body_path: RELEASE_NOTES.md
-          files: |
-            metrics.json
+      - name: Extract
